--- a/arabic_home.html
+++ b/arabic_home.html
@@ -2089,7 +2089,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2122,7 +2122,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2154,7 +2154,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2187,7 +2187,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2220,7 +2220,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2253,7 +2253,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2285,7 +2285,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2318,7 +2318,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2350,7 +2350,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2383,7 +2383,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2415,7 +2415,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2448,7 +2448,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2480,7 +2480,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2530,7 +2530,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2563,7 +2563,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2595,7 +2595,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2628,7 +2628,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2661,7 +2661,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2694,7 +2694,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2726,7 +2726,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2759,7 +2759,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2791,7 +2791,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2824,7 +2824,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2856,7 +2856,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2889,7 +2889,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2921,7 +2921,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                          <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
