--- a/arabic_home.html
+++ b/arabic_home.html
@@ -2937,7 +2937,7 @@
 
          
 
-              <div class="container">
+            <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
@@ -2973,7 +2973,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3006,7 +3006,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3038,7 +3038,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3071,7 +3071,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3104,7 +3104,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3137,7 +3137,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3169,7 +3169,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3202,7 +3202,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3234,7 +3234,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3267,7 +3267,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3299,7 +3299,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3332,7 +3332,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3364,7 +3364,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3414,7 +3414,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3447,7 +3447,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3479,7 +3479,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3512,7 +3512,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3545,7 +3545,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3578,7 +3578,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3610,7 +3610,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3643,7 +3643,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3675,7 +3675,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3708,7 +3708,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3740,7 +3740,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3773,7 +3773,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -3805,7 +3805,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
