--- a/contactus.html
+++ b/contactus.html
@@ -453,7 +453,7 @@
 
     <!-- Header End -->
 
-   <footer>
+     <footer>
         <div class="footer-wrappper footer-bg ">
            <!-- Footer Start-->
            <div class="footer-area footer-padding">
@@ -468,7 +468,7 @@
                                    </div>
                                    <div class="footer-tittle">
                                        <div class="footer-pera">
-                                         <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
+                                        <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
                                               In today’s fast-paced digital age, educational institutions are evolving rapidly to 
                                                meet the demands of efficient administration and seamless communication. One transformative 
                                                solution is the adoption of cloud-based institutions management systems. These systems offer an integrated 
@@ -482,7 +482,7 @@
                                        <a href="https://www.youtube.com/@ibrahimsiciidjamac" target="_blank" ><i class="fab fa-youtube"></i></a>
                                        <a href="https://www.facebook.com/share/1G1yuFcnfT/?mibextid=qi2Omg" target="_blank" ><i class="fab fa-facebook"></i></a>
                                        <a href="https://github.com/softwarepioneers" target="_blank" ><i class="fab fa-github"></i></a>
-                                       <a href="https://t.me/ibrahimSiciid" target="_blank"><i class="fab fa-telegram"></i></a>
+                                       <a href="https://t.me/+cSiyofBvRftkMjY0" target="_blank"><i class="fab fa-telegram"></i></a>
                                        <a href="https://chat.whatsapp.com/BifDArdCmG8Khg6dgIFUYq" target="_blank" ><i class="fab fa-whatsapp"></i></a>
                                    </div>
                                </div>
@@ -567,7 +567,7 @@
              </div>
              <!-- Footer End-->
          </div>
-     </footer>
+     </footer> 
   <!-- Scroll Up -->
   <div id="back-top" >
     <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
