--- a/archives.html
+++ b/archives.html
@@ -1717,10 +1717,10 @@
                                    <div class="footer-tittle">
                                        <div class="footer-pera">
                                         <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
-                                               In today’s fast-paced digital age, educational institutions are evolving rapidly to 
+                                              In today’s fast-paced digital age, educational institutions are evolving rapidly to 
                                                meet the demands of efficient administration and seamless communication. One transformative 
-                                               solution is the adoption of cloud-based school management systems. These systems offer an integrated 
-                                               platform to manage student records, attendance, grades, communication, and much more enhancing efficiency,
+                                               solution is the adoption of cloud-based institutions management systems. These systems offer an integrated 
+                                               platform to manage institutions records, attendance, grades, communication, and much more enhancing efficiency,
                                                security, and accessibility.
                                            </p>
                                        </div>
@@ -1730,7 +1730,7 @@
                                        <a href="https://www.youtube.com/@ibrahimsiciidjamac" target="_blank" ><i class="fab fa-youtube"></i></a>
                                        <a href="https://www.facebook.com/share/1G1yuFcnfT/?mibextid=qi2Omg" target="_blank" ><i class="fab fa-facebook"></i></a>
                                        <a href="https://github.com/softwarepioneers" target="_blank" ><i class="fab fa-github"></i></a>
-                                       <a href="https://t.me/ibrahimSiciid" target="_blank"><i class="fab fa-telegram"></i></a>
+                                       <a href="https://t.me/+cSiyofBvRftkMjY0" target="_blank"><i class="fab fa-telegram"></i></a>
                                        <a href="https://chat.whatsapp.com/BifDArdCmG8Khg6dgIFUYq" target="_blank" ><i class="fab fa-whatsapp"></i></a>
                                    </div>
                                </div>
