--- a/contactus.html
+++ b/contactus.html
@@ -615,5 +615,21 @@
 <script src="./assets/js/plugins.js"></script>
 <script src="./assets/js/main.js"></script>
 
+
+<script src="./assets/js/jquery-3.7.1.js"></script>
+<script src="./assets/js/dataTables.js"></script>
+<script>
+    new DataTable('#example', {
+   initComplete: function () {
+       let api = this.api();
+
+       api.on('click', 'tbody td', function () {
+           api.search(this.innerHTML).draw();
+       });
+   }
+});
+</script>
+
+
 </body>
 </html>
