--- a/arabic_systems.html
+++ b/arabic_systems.html
@@ -324,6 +324,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ARABIC</h2>
+                            <h2>MAANDEEQ</h2>
                             <h2>CUSTOMERS</h2>
                         </div>
                     </div>
