--- a/contactus.html
+++ b/contactus.html
@@ -457,8 +457,8 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
                             <h2>ACADEMIC</h2>
-                            <h2>PLATFORMS</h2>
-                            <h2>APPLICATIONS</h2>
+                            <h2>CUSTOMERS</h2>
+                            <h2>LIST</h2>
                         </div>
                     </div>
                 </div>
