--- a/english_systems.html
+++ b/english_systems.html
@@ -760,11 +760,10 @@
                     <table id="example" class="display table-dark " style="width:100%">
                         <thead class="table-dark">
                             <tr>
-                                <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>SYSTEM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1232,7 +1231,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>SYSTEM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
