--- a/english_systems.html
+++ b/english_systems.html
@@ -1425,8 +1425,8 @@
 <script src="./assets/js/plugins.js"></script>
 <script src="./assets/js/main.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-<script src="https://cdn.datatables.net/2.2.2/js/dataTables.js"></script>
+<script src="./assets/js/jquery-3.7.1.js"></script>
+<script src="./assets/js/dataTables.js"></script>
 <script>
     new DataTable('#example', {
    initComplete: function () {
