--- a/english_systems.html
+++ b/english_systems.html
@@ -63,44 +63,44 @@
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">HOME</a>
                                                     <ul class="submenu">
-                                                        <li><a href="index.html">MAANDEEQ HOME</a></li>
-                                                        <li><a href="arabic_home.html">ENGLISH DEPARTMENT</a></li>
-                                                        <li><a href="english_home.html">ENGLISH DEPARTMENT</a></li>
+                                                        <li><a href="index.html">HOME PLATFORM</a></li>
+                                                        <li><a href="arabic_home.html">ARABIC PLATFORM</a></li>
+                                                        <li><a href="english_home.html">ENGLISH PLATFORM</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="exams.html">EXAMINATIONS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="exams.html">MAANDEEQ EXAMINATIONS</a></li>
-                                                        <li><a href="arabic_exams.html">ENGLISH PRODUCTS</a></li>
+                                                        <li><a href="exams.html">SERVICES EXAMINATIONS</a></li>
+                                                        <li><a href="arabic_exams.html">ARABIC EXAMINATIONS</a></li>
                                                         <li><a href="english_exams.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="services.html">SERVICES</a>
                                                     <ul class="submenu">
-                                                        <li><a href="services.html">MAANDEEQ SUBCRIPTIONS</a></li>
-                                                        <li><a href="arabic_services.html">ENGLISH SUBCRIPTIONS</a></li>
-                                                        <li><a href="english_services.html">ENGLISH SUBCRIPTIONS</a></li>
+                                                        <li><a href="services.html">SERVICES SUBSCRIPTIONS</a></li>
+                                                        <li><a href="arabic_services.html">ARABIC SUBSCRIPTIONS</a></li>
+                                                        <li><a href="english_services.html">ENGLISH SUBSCRIPTIONS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="products.html">PRODUCTS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="products.html">MAANDEEQ PRODUCTS</a></li>
-                                                        <li><a href="arabic_products.html">ENGLISH APPLICATIONS</a></li>
+                                                        <li><a href="products.html">PRODUCTS APPLICATIONS</a></li>
+                                                        <li><a href="arabic_products.html">ARABIC APPLICATIONS</a></li>
                                                         <li><a href="english_products.html">ENGLISH APPLICATIONS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="archives.html">DOWNLOADS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="archives.html">MAANDEEQ DOWNLOADS</a></li>
-                                                        <li><a href="arabic_archives.html">ENGLISH DOWNLOADS</a></li> 
+                                                        <li><a href="archives.html">ARCHIVES DOWNLOADS</a></li>
+                                                        <li><a href="arabic_archives.html">ARABIC DOWNLOADS</a></li> 
                                                         <li><a href="english_archives.html">ENGLISH DOWNLOADS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="contactus.html">CONTACTS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="contactus.html">MAANDEEQ CONTACTS</a></li>
-                                                        <li><a href="arabic_systems.html">ENGLISH INSTITUTIONS</a></li>
-                                                        <li><a href="english_systems.html">ENGLISH INSTITUTIONS</a></li>
+                                                        <li><a href="contactus.html">CONTACTS CUSTOMERS</a></li>
+                                                        <li><a href="arabic_systems.html">ARABIC CUSTOMERS</a></li>
+                                                        <li><a href="english_systems.html">ENGLISH CUSTOMERS</a></li>
                                                     </ul>
                                                 </li>
                                                 <!-- Button -->
