--- a/arabic_systems.html
+++ b/arabic_systems.html
@@ -763,7 +763,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>SYSTEM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1227,11 +1227,11 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>INSTITUTION</th>
+                               <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>SYSTEM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
