--- a/english_systems.html
+++ b/english_systems.html
@@ -131,7 +131,7 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-7 col-md-12">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED ENGLISH EDUCATIONAL <br> MANAGEMENT INFORMATION PLATFORM</h1>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED ENGLISH EDUCATIONAL <br> MANAGEMENT INFORMATION CUSTOMERS</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
                                       
                                     </P>
