--- a/english_systems.html
+++ b/english_systems.html
@@ -3826,8 +3826,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
                             <h2>ENGLISH</h2>
-                            <h2>PLATFORMS</h2>
-                             <h2>APPLICATIONS</h2>
+                            <h2>CUSTOMERS</h2>
                         </div>
                     </div>
                 </div>
