--- a/english_systems.html
+++ b/english_systems.html
@@ -329,7 +329,7 @@
                         <div class="section-tittle text-center mb-55">
                               <h2>ENGLISH</h2>
                               <h2>CUSTOMERS</h2>
-                              <h2>APPLICATIONS</h2>
+                              <h2>SYSTEMS</h2>
                         </div>
                     </div>
                 </div>
