--- a/arabic_systems.html
+++ b/arabic_systems.html
@@ -325,7 +325,7 @@
                         <div class="section-tittle text-center mb-55">
                               <h2>ARABIC</h2>
                               <h2>CUSTOMERS</h2>
-                              <h2>APPLICATIONS</h2>
+                              <h2>SYSTEMS</h2>
                         </div>
                     </div>
                 </div>
