--- a/english_exams.html
+++ b/english_exams.html
@@ -1659,7 +1659,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>PLATFORM</th>
+                                <th>SYSTEM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -2127,7 +2127,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>PLATFORM</th>
+                                <th>SYSTEM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
