--- a/exams.html
+++ b/exams.html
@@ -1643,7 +1643,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
                             <h2>ACADEMIC</h2>
-                            <h2>PLATFORM</h2>
+                            <h2>SYSTEMS</h2>
                             <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
