--- a/arabic_exams.html
+++ b/arabic_exams.html
@@ -1643,7 +1643,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
                             <h2>ARABIC</h2>
-                            <h2>SYSTEMS</h2>
+                            <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
@@ -1659,7 +1659,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>SYSTEM</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -2123,11 +2123,11 @@
                         </tbody>
                        <tfoot>
                             <tr>
-                                <th>INSTITUTION</th>
+                               <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>SYSTEM</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
