--- a/contactus.html
+++ b/contactus.html
@@ -456,7 +456,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
-                            <h2>ACADEMIC</h2>
+                            <h2>CURRENT</h2>
                             <h2>CUSTOMERS</h2>
                            
                         </div>
