--- a/contactus.html
+++ b/contactus.html
@@ -140,7 +140,7 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-7 col-md-12">
                                 <div class="hero__caption">
-                                     <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EDUCATIONAL <br> MANAGEMENT INFORMATION CUSTOMERS</h1>
+                                     <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED CURRENT EDUCATIONAL <br> MANAGEMENT INFORMATION CUSTOMERS</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
                                         
                                     </P>
