--- a/contactus.html
+++ b/contactus.html
@@ -941,7 +941,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>SYSTEM</th>
+                                <th>CURRENT</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
