--- a/index.html
+++ b/index.html
@@ -84,13 +84,35 @@
                                                         <li><a href="english_services.html">ENGLISH SUBSCRIPTIONS</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="products.html">PRODUCTS</a>
+                                                  <li><a href="products.html">PRODUCTS</a>
                                                     <ul class="submenu">
                                                         <li><a href="products.html">PRODUCTS APPLICATIONS</a></li>
                                                         <li><a href="arabic_products.html">ARABIC APPLICATIONS</a></li>
                                                         <li><a href="english_products.html">ENGLISH APPLICATIONS</a></li>
                                                     </ul>
                                                 </li>
+                                                <li><a href="products.html">SCHOOLS</a>
+                                                    <ul class="submenu">
+                                                        <li><a href="products.html">REGISTERED SCHOOLS</a></li>
+                                                        <li><a href="arabic_products.html">ACTIVATED SCHOOLS</a></li>
+                                                        <li><a href="english_products.html">SUSPENDED SCHOOLS</a></li>
+                                                    </ul>
+                                                </li>
+                                                 <li><a href="products.html">INSTITUTES</a>
+                                                    <ul class="submenu">
+                                                        <li><a href="products.html">REGISTERED INSTITUTES</a></li>
+                                                        <li><a href="arabic_products.html">ACTIVATED INSTITUTES</a></li>
+                                                        <li><a href="english_products.html">SUSPENDED INSTITUTES</a></li>
+                                                    </ul>
+                                                </li>
+                                                  <li><a href="products.html">UNIVERSITIES</a>
+                                                    <ul class="submenu">
+                                                        <li><a href="products.html">REGISTERED UNIVERSITIES</a></li>
+                                                        <li><a href="arabic_products.html">ACTIVATED UNIVERSITIES</a></li>
+                                                        <li><a href="english_products.html">SUSPENDED UNIVERSITIES</a></li>
+                                                    </ul>
+                                                </li>
+                                                
                                                 <li><a href="archives.html">DOWNLOADS</a>
                                                     <ul class="submenu">
                                                         <li><a href="archives.html">ARCHIVES DOWNLOADS</a></li>
