--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
                                                         <li><a href="english_products.html">ENGLISH APPLICATIONS</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="products.html">SCHOOLS</a>
+                                                <li><a href="schools.html">SCHOOLS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="products.html">REGISTERED SCHOOLS</a></li>
-                                                        <li><a href="arabic_products.html">ACTIVATED SCHOOLS</a></li>
-                                                        <li><a href="english_products.html">SUSPENDED SCHOOLS</a></li>
+                                                        <li><a href="schools.html">REGISTERED SCHOOLS</a></li>
+                                                        <li><a href="activated_schools.html">ACTIVATED SCHOOLS</a></li>
+                                                        <li><a href="suspended_schools.html">SUSPENDED SCHOOLS</a></li>
                                                     </ul>
                                                 </li>
-                                                 <li><a href="products.html">INSTITUTES</a>
+                                                 <li><a href="institutes.html">INSTITUTES</a>
                                                     <ul class="submenu">
-                                                        <li><a href="products.html">REGISTERED INSTITUTES</a></li>
-                                                        <li><a href="arabic_products.html">ACTIVATED INSTITUTES</a></li>
-                                                        <li><a href="english_products.html">SUSPENDED INSTITUTES</a></li>
+                                                        <li><a href="institutes.html">REGISTERED INSTITUTES</a></li>
+                                                        <li><a href="activated_institutes.html">ACTIVATED INSTITUTES</a></li>
+                                                        <li><a href="suspended_institutes.html">SUSPENDED INSTITUTES</a></li>
                                                     </ul>
                                                 </li>
-                                                  <li><a href="products.html">UNIVERSITIES</a>
+                                                  <li><a href="universites.html">UNIVERSITIES</a>
                                                     <ul class="submenu">
-                                                        <li><a href="products.html">REGISTERED UNIVERSITIES</a></li>
-                                                        <li><a href="arabic_products.html">ACTIVATED UNIVERSITIES</a></li>
-                                                        <li><a href="english_products.html">SUSPENDED UNIVERSITIES</a></li>
+                                                        <li><a href="universites.html">REGISTERED UNIVERSITIES</a></li>
+                                                        <li><a href="activated_universites.html">ACTIVATED UNIVERSITIES</a></li>
+                                                        <li><a href="suspended_universites.html">SUSPENDED UNIVERSITIES</a></li>
                                                     </ul>
                                                 </li>
                                                 
