--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                                                     </ul>
                                                 </li>
                                                 <!-- Button -->
-                                                <li class="button-header"><a href="lognIn.html" class="btn btn3">LOGIN</a></li>
+                                                <li class="button-header"><a href="login.html" class="btn btn3">LOGIN</a></li>
+                                                <li class="button-header"><a href="login.html" class="btn btn3">LOGIN</a></li>
                                             </ul>
                                         </nav>
                                     </div>
