--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                                               
                                                 <li><a href="services.html">SERVICES</a>
                                                     <ul class="submenu">
-                                                        <li><a href="services.html">SERVICES SUBSCRIPTIONS</a></li>
-                                                        <li><a href="arabic_services.html">ARABIC SUBSCRIPTIONS</a></li>
-                                                        <li><a href="english_services.html">ENGLISH SUBSCRIPTIONS</a></li>
+                                                        <li><a href="services.html">SERVICES APPLICATIONS</a></li>
+                                                        <li><a href="arabic_services.html">ARABIC APPLICATIONS</a></li>
+                                                        <li><a href="english_services.html">ENGLISH APPLICATIONS</a></li>
                                                         <li><a href="exams.html">SERVICES EXAMINATIONS</a></li>
                                                         <li><a href="arabic_exams.html">ARABIC EXAMINATIONS</a></li>
                                                         <li><a href="english_exams.html">ENGLISH EXAMINATIONS</a></li>
@@ -86,6 +86,9 @@
                                                         <li><a href="products.html">PRODUCTS APPLICATIONS</a></li>
                                                         <li><a href="arabic_products.html">ARABIC APPLICATIONS</a></li>
                                                         <li><a href="english_products.html">ENGLISH APPLICATIONS</a></li>
+                                                         <li><a href="products.html">PRODUCTS EXAMINATIONS</a></li>
+                                                        <li><a href="arabic_products.html">ARABIC EXAMINATIONS</a></li>
+                                                        <li><a href="english_products.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="schools.html">SCHOOLS</a>
