--- a/index.html
+++ b/index.html
@@ -91,28 +91,21 @@
                                                         <li><a href="english_products.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="schools.html">SCHOOLS</a>
+
+                                                <li><a href="institutions.html">SCHOOLS</a>
                                                     <ul class="submenu">
                                                         <li><a href="schools.html">REGISTERED SCHOOLS</a></li>
                                                         <li><a href="activated_schools.html">ACTIVATED SCHOOLS</a></li>
                                                         <li><a href="suspended_schools.html">SUSPENDED SCHOOLS</a></li>
-                                                    </ul>
-                                                </li>
-                                                 <li><a href="institutes.html">INSTITUTES</a>
-                                                    <ul class="submenu">
                                                         <li><a href="institutes.html">REGISTERED INSTITUTES</a></li>
                                                         <li><a href="activated_institutes.html">ACTIVATED INSTITUTES</a></li>
                                                         <li><a href="suspended_institutes.html">SUSPENDED INSTITUTES</a></li>
-                                                    </ul>
-                                                </li>
-                                                  <li><a href="universites.html">UNIVERSITIES</a>
-                                                    <ul class="submenu">
                                                         <li><a href="universites.html">REGISTERED UNIVERSITIES</a></li>
                                                         <li><a href="activated_universites.html">ACTIVATED UNIVERSITIES</a></li>
                                                         <li><a href="suspended_universites.html">SUSPENDED UNIVERSITIES</a></li>
                                                     </ul>
                                                 </li>
-                                                
+   
                                                 <li><a href="archives.html">DOWNLOADS</a>
                                                     <ul class="submenu">
                                                         <li><a href="archives.html">ARCHIVES DOWNLOADS</a></li>
