--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                                     </ul>
                                                 </li>
 
-                                                <li><a href="institutions.html">SCHOOLS</a>
+                                                <li><a href="institutions.html">INSTITUTIONS</a>
                                                     <ul class="submenu">
                                                         <li><a href="schools.html">REGISTERED SCHOOLS</a></li>
                                                         <li><a href="activated_schools.html">ACTIVATED SCHOOLS</a></li>
